--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 15 16:27:28 CET 2017
-sdk.dir=C\:\\Users\\mateu\\AppData\\Local\\Android\\Sdk
+#Sun Jan 15 20:07:19 CET 2017
+sdk.dir=C\:\\Users\\Marek\\AppData\\Local\\Android\\Sdk
